--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                           <label>Name</label>
                           <input type="text" class="form-control" id="name" placeholder="Name">
                           <div class="invalid-feedback">
-                              Name must be between 2 and 20 characters
+                              Name must be between 2 and 30 characters
                           </div>
                       </div>
                       <div class="form-group">
@@ -39,7 +39,7 @@
                         <label>Mobile Number</label>
                         <input type="mobile" class="form-control" id="mobile" placeholder="Mobile Number">
                         <div class="invalid-feedback">
-                            Enter a valid mobile
+                            Enter a valid mobile Number
                         </div>
                     </div>
                     <input type="submit" value="Submit" class="btn btn-primary btn-block">
